[tool.poetry]
name = "repl-nix-projectatlas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.45.0"
streamlit = "^1.38.0"
requests = "^2.32.3"
pandas = "^2.2.2"
plotly = "^5.24.1"
langchain = "^0.2.16"
faiss-cpu = "^1.8.0.post1"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.10"
langchain-community = "^0.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
